Use old self-attach mechanism if server start script is bypassed